--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>Welcome to</h1>
-    <h1>Imran website</h1>
+    <h1><span class="name">Imran</span> Website</h1>
     
 </body>
 </html>
