--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>Welcome to</h1>
+    <h1>Welcome To</h1>
     <h1><span class="name">Imran</span> Website</h1>
+    <h3>Imran proffessional webdevloper</h3>
+     <p>Web developers build, service and maintain visually appealing and user friendly websites. They not only work across a broad range of projects and technical disciplines, but also liaise closely with clients to find out their exact needs, this in turn allows them to build a site that meets a customers exact requirements.</p>
     
 </body>
 </html>
